added two comments in array

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,4 @@
+<!-- HTML Stuff you want to see on every page-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,6 +16,7 @@
   </header>
   <nav>
     <a href="/">Home</a>
+    <!-- Expressions get two handlebars -->
     {{#if loggedIn}}
     <button id="logout" class="btn-no-style">Logout</button>
     {{else}}
@@ -26,6 +28,7 @@
       <h2>Enjoy the Tech Blog!</h2>
     </aside>
     <div class="gallery">
+       <!--  Renders HTML gets three handlebars -->
       {{{body}}}
     </div>
   </main>
