--- a/views/partials/title-details.handlebars
+++ b/views/partials/title-details.handlebars
@@ -1,10 +1,12 @@
-<section class="card">
-  <a href="/painting/{{id}}">
+<div class="card">
+  <div class="comment-card-header">
+    <!-- Render the title of one comment using a handlebars.js expression -->
     <header>{{title}}</header>
+  </div>
 
     <div class="card-body">
-      <img src="/images/{{filename}}" alt="{{description}}">
-      <p>By: {{artist}}</p>
+      <p>{{description}}</p>
     </div>
-  </a>
+</div>
+  
 </section>
