--- a/views/partials/title-details.handlebars
+++ b/views/partials/title-details.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="comment-card-header">
     <!-- Render the title of one comment using a handlebars.js expression -->
-    <header>{{title}}</header>
+    <header>{{comment_title}}</header>
   </div>
 
     <div class="card-body">
