--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,16 @@
-{{#each galleries as |gallery|}}
-{{> gallery-details}}
+{{#each posts as |post|}}
+
+ <div>
+    <div class="row mb-4 project">
+  <div class="col-md-5">
+     <!-- Render the title of one comment using a handlebars.js expression -->
+    <h2><a href="/post/{{post.id}}">{{post.post_title}}</a></h2>
+    <p>Created by {{post.user.name}}</p>
+  </div>
+        <div class="col-md-7">
+            <p>{{post.description}}</p>
+        </div>
+    </div>
+</div> 
+
 {{/each}}
