--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,7 +5,7 @@
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
+        <input class="form-input" type="text" id="-signup" />
       </div>
       <div class="form-group">
         <label for="email-signup">Email:</label>
