--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
     <!-- Expressions get two handlebars -->
     {{#if logged_in}}
     <button id="logout" class="btn-no-style">Logout</button>
+    <a href="/dashboard">Dashboard</a>
     {{else}}
     <a href="/login">Login</a>
     <a href="/dashboard">Dashboard</a>
