--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="row justify-space-between-md">
   <div class="login-card">
-    <h2 class="page-title">Login</h2>
+    <header class="page-title">Login</header>
     <form class="form login-form" id="login-form">
       <div class="form-group">
         <label for="email-login">Email:</label>
@@ -17,4 +17,4 @@
   </div>
 
 
-<script src="./js/login.js"></script>
+<script src="/public/js/login.js"></script>
