playing with it to get it right

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-input[type=text], select {
+ input[type=text], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -10,8 +10,8 @@ input[type=text], select {
   
   input[type=submit] {
     width: 100%;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #4ca0af;
+    color: black;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -19,15 +19,48 @@ input[type=text], select {
     cursor: pointer;
   }
   
-  .btn-lg, input[type=submit]:hover {
+   .btn-lg, input[type=submit]:hover {
     background-color: #45a049;
     width: 1215px;
     margin-top: 15px;
+  } 
+  
+  header,
+  .project:not(:last-child) {
+      border-bottom: 1px solid #ccc;
+      font-size: large;
+      font: bold;
   }
   
-  div {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
+  .no-button {
+      background: none;
+      border: none;
+      padding: 0;
+      cursor: pointer;
+      color: #1b89bc;
+      text-decoration: none;
+      font-size: 100%;
   }
-
+  
+  .no-button:hover {
+      color: #065b83;
+      text-decoration: underline;
+  }
+  
+  .dollar-amount {
+      color: #056605;
+      font-weight: bold;
+      margin-left: -5px;
+  }
+  
+  .custom-bg {
+      background-color: rgb(37, 117, 182);
+  }
+  
+  .custom-input-height {
+      height: 50px;
+  }
+  
+  .custom-hidden {
+      display: none;
+  }
