--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
+  <script src="https://kit.fontawesome.com/b84e779c40.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
@@ -13,7 +15,7 @@
 
 <body>
   
-    <nav>
+    {{!-- <nav>
     <a href="/">Home</a>
     <!-- Expressions get two handlebars -->
     {{#if logged_in}}
@@ -35,7 +37,34 @@
        <!--  Renders HTML gets three handlebars -->
       {{{body}}}
     </div>
-  </main>
+  </main> --}}
+
+ <div class="flex-column justify-space-around ">
+    <header class="display-flex justify-space-between align-center p-2 custom-bg">
+      <h1 >
+       
+        <a href="/" class="text-light">Tech Blog</a>
+      </h1>
+      <nav>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <a href="/" class="text-light">home</a> |
+        <a href="/dashboard" class="text-light">dashboard</a> |
+        <button class="no-button mr-4 text-light" id="logout">logout</button>
+        {{else}}
+        <a class="mr-4 text-light" href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{ body }}}
+    </main>
+    <footer>
+      
+    </footer>
+  </div>
+
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
@@ -43,5 +72,5 @@
 
 </html>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="/js/login.js"></script>
+
+{{!-- <script src="/js/login.js"></script> --}}
