--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,30 +1,12 @@
+
 {{!-- {{#each posts as |post|}}
-
-<h1>Dashboard</h1>
-
- <div>
-    <div class="row mb-4 project">
-  <div class="col-md-5">
-     <!-- Render the title of one comment using a handlebars.js expression -->
-    <h2><a href="/post/{{post.id}}">{{post.post_title}}</a></h2>
-    <p>Created by {{post.user.name}}</p>
-  </div>
-        <div class="col-md-7">
-            <p>{{post.description}}</p>
-        </div>
-    </div>
-</div> 
-
-{{/each}} --}}
-
-{{#each posts as |post|}}
 <header class="new-post">Create New Post</header>
 <form class="form signup-form" id="dashboard-form">
 <div class="form-group">
     <label for="exampleFormControlSelect1">Title</label>
     <!-- Render the title of one comment using a handlebars.js expression -->
     <h2><a href="/post/{{post.id}}">{{post.post_title}}</a></h2>
-    <p>Created by {{post.user.name}}</p>
+    <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
     <input class="form-control" id="title-dashboard">
 </div>
 <div class="form-group">
@@ -35,6 +17,40 @@
     <a href="/signup">Sign up instead</a>
 </div>
 </form>
+{{/each}} --}}
+
+
+{{#each posts as |post| }}
+<div class="row mb-4 project">
+    <div class="col-md-5">
+        <h2>
+            <a href="/post/{{post.id}}">{{post.post_title}}</a>
+        </h2>
+        <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
+    </div>
+    <div class="col-md-7">
+        <p>
+            {{post.description}}
+        </p>
+    </div>
+</div>
+
+<p class="custom-hidden" id="{{post.id}}">{{post.id}}</p>
 {{/each}}
 
-  <script src="./js/dashboard.js"></script>
+<div class="row mb-4 project mt-5">
+    <div class="col-md-5">
+        <h2>Add A New Post</h2>
+    </div>
+    <div class="col-md-7">
+        <form>
+            <label>Post Title</label>
+            <input type="text" id="title-dashboard" class="w-100 custom-input-height" required>
+            <label>Post Content</label>
+            <input type="text" id="content-dashboard" class="w-100 custom-input-height" required>
+            <button id="dashboard-form" class="mt-2 mb-2">Submit</button>
+        </form>
+    </div>
+</div>
+
+<script src="./js/dashboard.js"></script> 
