--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="row justify-space-between-md">
   <div class="login-card">
-    <header class="page-title">Login</header>
-    <form class="form login-form" id="login-form">
+    <h2 class="page-title">Login</h2>
+    <form class="form" id="login-form">
       <div class="form-group">
         <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
@@ -16,5 +16,4 @@
     </form>
   </div>
 
-
-<script src="/public/js/login.js"></script>
+<script src="./js/login.js"></script>
