renamed ids in dashboard to get post to render

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -43,11 +43,11 @@
         <h2>Add A New Post</h2>
     </div>
     <div class="col-md-7">
-        <form>
-            <label>Post Title</label>
-            <input type="text" id="title-dashboard" class="w-100 custom-input-height" required>
+        <form class="new-post-form">
+            <label for="post_title">Post Title</label>
+            <input type="text" id="title_dashboard" class="w-100 custom-input-height" required>
             <label>Post Content</label>
-            <input type="text" id="content-dashboard" class="w-100 custom-input-height" required>
+            <input type="text" id="content_dashboard" class="w-100 custom-input-height" required>
             <button id="dashboard-form" class="mt-2 mb-2">Submit</button>
         </form>
     </div>
