post are rendering now

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -43,14 +43,14 @@
         <h2>Add A New Post</h2>
     </div>
     <div class="col-md-7">
-        <form class="new-post-form">
+        {{!-- <form class="new-post-form"> --}}
             <label for="post_title">Post Title</label>
             <input type="text" id="title_dashboard" class="w-100 custom-input-height" required>
             <label>Post Content</label>
             <input type="text" id="content_dashboard" class="w-100 custom-input-height" required>
             <button id="dashboard-form" class="mt-2 mb-2">Submit</button>
-        </form>
+        {{!-- </form> --}}
     </div>
 </div>
 
-<script src="./js/dashboard.js"></script> 
+<script src="/js/dashboard.js"></script> 
