added signup link in main handlebars

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -32,6 +32,8 @@
         <p>
             {{post.description}}
         </p>
+        <a href="/dashboard/post/{{post.id}}"><button class="mt-2 mb-2 update">Update</button></a>
+        <button data-id="{{post.id}}" class="mt-2 mb-2 delete">delete</button>
     </div>
 </div>
 
