--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,6 @@
  <div class="flex-column justify-space-around ">
     <header class="display-flex justify-space-between align-center p-2 custom-bg">
       <h1 >
-       
         <a href="/" class="text-light">Tech Blog</a>
       </h1>
       <nav>
@@ -53,6 +52,7 @@
         <button class="no-button mr-4 text-light" id="logout">logout</button>
         {{else}}
         <a class="mr-4 text-light" href="/login">login</a>
+        <a href="/signup">Signup</a>
         {{/if}}
       </nav>
     </header>
